# BigSmall

./: .gitignore  README.md  evaluate-base.py  evaluate-decode.py  evaluate-run-decode.py  evaluate-run.py  pyproject.toml  train.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
config/: decode_eval.yaml  decode_run_eval.yaml  test.yaml  train.yaml  train_ivo.yaml
custom_generate/: README.md  delimiter.py  generate.py  original_generate.py  utils.py
grpo_trainer_lora_model_2/: adapter_config.json
grpo_trainer_lora_model_4/: adapter_config.json
ivo_trainer_lora_model_0/: adapter_config.json
ivo_trainer_lora_model_02/: adapter_config.json
ivo_trainer_lora_model_1/: adapter_config.json
ivo_trainer_lora_model_4/: adapter_config.json
ivo_trainer_lora_model_45/: adapter_config.json
ivo_trainer_lora_model_5/: adapter_config.json
ivo_trainer_lora_model_6/: adapter_config.json
ivo_trainer_lora_model_67/: adapter_config.json
ivo_trainer_lora_model_7/: adapter_config.json
qwen25_math_evaluation/: data_loader.py  evaluate.py  grader.py  math_eval.py  parser.py  rm_maj_eval.py  utils.py
results/: GeoGRPO_1.5B_T512_N16_lambda0.1.json  GeoGRPO_1.5B_T512_N16_lambda0.99.json  GeoGRPO_1.5B_T512_N16_lambda1.0.json  New_GeoGRPO_1.5B_T512_N16_lambda0.5.json  Online_SMC_NonSelf_1.5B-BASE_512_W512_N16_D8_noscaling.json  Online_SMC_NonSelf_1.5B_BASE_512_N8_P16_D8_dsn1.json  Online_SMC_NonSelf_1.5B_BASE_512_N8_P16_D8_dsn2.json  Online_SMC_NonSelf_1.5B_BASE_512_N8_P16_D8_dsn4.json  Online_SMC_NonSelf_1.5B_BASE_512_N8_P4_D1.json  (+58 more)
scripts/: length.py  merge.py  (+4 more)
(+606 files in other folders)
