[project]
name = "unsloth-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core",
    "math-verify",
    "matplotlib",
    "pylatexenc",
    "scipy",
    "setuptools",
    "unsloth",
    "vllm",
    "wandb",
]
